# NightEngine2

./: .gitignore  CMakeLists.txt  LICENSE  NightEngine2.sln  README.md
NightEngine2/: CMakeLists.txt  NightEngine2.vcxproj  imgui.ini
NightEngine2/solutions/: NightEngine2.sln  NightEngine2.vcxproj  NightEngine2.vcxproj.filters
NightEngine2/solutions/Core/: Core.vcxproj  Core.vcxproj.filters
NightEngine2/src/: Editor.cpp  Editor.hpp  EngineConfigs.hpp  NightEngine2.cpp  NightEngine2.hpp  World.cpp  main.cpp
NightEngine2/src/Core/: GameStatus.cpp  GameStatus.hpp  GameTime.cpp  GameTime.hpp  Logger.cpp  Logger.hpp  Macros.hpp  World.cpp  World.hpp
NightEngine2/src/Core/Container/: Container.hpp  Hashmap.hpp  Map.hpp  MurmurHash2.hpp  PrimitiveType.hpp  Slotmap.hpp  String.hpp  Vector.hpp
NightEngine2/src/Core/EC/: Archetype.cpp  Archetype.hpp  ArchetypeManager.cpp  ArchetypeManager.hpp  ComponentLogic.cpp  ComponentLogic.hpp  ComponentLogic.inl  Creator.hpp  Entity.hpp  Factory.cpp  Factory.hpp  GameObject.cpp  GameObject.hpp  Handle.cpp  Handle.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp
NightEngine2/src/Core/EC/Components/: MeshRenderer.cpp  MeshRenderer.hpp  Rigidbody.cpp  (+5 more)
NightEngine2/src/Core/ECS/: Archetype.cpp  Archetype.hpp  ArchetypeManager.cpp  ArchetypeManager.hpp  ComponentLogic.cpp  ComponentLogic.hpp  Creator.hpp  Entity.hpp  Factory.cpp  Factory.hpp  GameObject.cpp  GameObject.hpp  Handle.cpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneNode.cpp
NightEngine2/src/Core/Lua/: LuaCore.cpp  LuaCore.hpp  sol.hpp  sol_forward.hpp
NightEngine2/src/Core/Message/: IMessageHandler.cpp  IMessageHandler.hpp  MessageObject.hpp  MessageObjectList.cpp  MessageObjectList.hpp  MessageSystem.cpp  MessageSystem.hpp  MessageTypeEnum.hpp  RegisterMessageList.inl
NightEngine2/src/Core/Reflection/: Member.cpp  Member.hpp  MetaManager.cpp  MetaManager.hpp  MetaType.cpp  MetaType.hpp  ReflectionCore.cpp  ReflectionCore.hpp  ReflectionMacros.hpp  RemoveQualifier.hpp  Variable.cpp  Variable.hpp
NightEngine2/src/Core/Serialization/: FileSystem.cpp  FileSystem.hpp  ResourceManager.cpp  ResourceManager.hpp  Serialization.cpp  Serialization.hpp  SerializeFunction.cpp  SerializeFunction.hpp
NightEngine2/src/Core/Utility/: ParametricFunction.cpp  ParametricFunction.hpp  Profiling.cpp  Profiling.hpp  Utility.cpp  Utility.hpp
NightEngine2/src/Editor/: ArchetypeBrowser.cpp  ArchetypeBrowser.hpp  ConfirmationBox.cpp  ConfirmationBox.hpp  DevConsole.cpp  DevConsole.hpp  GameObjectBrowser.cpp  GameObjectHierarchy.cpp  GameObjectHierarchy.hpp  Inspector.cpp  MaterialEditor.cpp  MaterialEditor.hpp  MemberSerializerEditor.cpp  MemberSerializerEditor.hpp  PostProcessSettingEditor.cpp  PostProcessSettingEditor.hpp  RenderSettingEditor.cpp  RenderSettingEditor.hpp
NightEngine2/src/Graphic/: CameraObject.cpp  CameraObject.hpp  Color.hpp  Cubemap.cpp  Cubemap.hpp  Editor.cpp  ElementBufferObject.cpp  ForwardRendering.cpp  FrameBufferObject.cpp  GBuffer.cpp  GBuffer.hpp  GraphicCore.cpp  GraphicCore.hpp  IBL.cpp  IBL.hpp  IRenderLoop.cpp  IRenderLoop.hpp  InstanceDrawer.cpp  InstanceDrawer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PrimitiveShape.hpp  RenderBufferObject.cpp  RenderBufferObject.hpp  Shader.cpp  Shader.hpp  ShaderTracker.cpp  ShaderTracker.hpp  Texture.cpp  UniformBufferObject.cpp  Vertex.cpp  Vertex.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  (+3 more)
NightEngine2/src/Graphic/Editor/: ArchetypeBrowser.cpp  ConfirmationBox.cpp  ConfirmationBox.hpp  DevConsole.cpp  DevConsole.hpp  Editor.cpp  GameObjectBrowser.cpp  GameObjectBrowser.hpp  GameObjectHierarchy.cpp  Inspector.cpp  Inspector.hpp  MemberSerializerEditor.cpp  MemberSerializerEditor.hpp
NightEngine2/src/Graphic/Opengl/: CameraObject.cpp  CameraObject.hpp  Cubemap.cpp  Cubemap.hpp  ElementBufferObject.cpp  ElementBufferObject.hpp  ForwardRendering.cpp  FrameBufferObject.cpp  FrameBufferObject.hpp  GBuffer.cpp  GBuffer.hpp  IBL.cpp  IBL.hpp  InstanceDrawer.cpp  InstanceDrawer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OpenglAllocationTracker.cpp  OpenglAllocationTracker.hpp  PrimitiveShape.hpp  RenderBufferObject.cpp  RenderBufferObject.hpp  RenderLoopOpengl.cpp  RenderLoopOpengl.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBufferObject.cpp  UniformBufferObject.hpp  Vertex.cpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  (+3 more)
NightEngine2/src/Graphic/Postprocess/: Bloom.cpp  Bloom.hpp  FXAA.cpp  FXAA.hpp  SSAO.cpp  SSAO.hpp
NightEngine2/src/Graphic/RenderDoc/: RenderDocManager.cpp  RenderDocManager.hpp
NightEngine2/src/Graphic/imgui/: example_main.cxx  imgui.cpp  imgui_internal.h
NightEngine2/src/Graphics/: Color.hpp  Editor.cpp  IRenderLoop.cpp  IRenderLoop.hpp  RenderLoopOpengl.cpp  RenderLoopOpengl.hpp  ShaderTracker.cpp  ShaderTracker.hpp
NightEngine2/src/Graphics/Opengl/: CameraObject.cpp  CameraObject.hpp  Cubemap.cpp  Cubemap.hpp  DebugMarker.cpp  DebugMarker.hpp  ElementBufferObject.cpp  ElementBufferObject.hpp  ForwardRendering.cpp  FrameBufferObject.cpp  FrameBufferObject.hpp  GBuffer.cpp  GBuffer.hpp  IBL.cpp  IBL.hpp  InstanceDrawer.cpp  InstanceDrawer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  MaterialProperty.cpp  MaterialProperty.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  Model.hpp  OpenglAllocationTracker.cpp  OpenglAllocationTracker.hpp  PrimitiveShape.hpp  RenderBufferObject.cpp  RenderBufferObject.hpp  RenderState.cpp  RenderState.hpp  Shader.cpp  Shader.hpp  ShaderTracker.cpp  ShaderTracker.hpp  (+12 more)
NightEngine2/src/Graphics/RenderDoc/: RenderDocManager.cpp  RenderDocManager.hpp
NightEngine2/src/Input/: Input.cpp  Input.hpp  RegisteredInputKey.inl
NightEngine2/src/Physics/: Collider.cpp  Collider.hpp  PhysicUtilities.hpp  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.hpp  PhysicsScene.cpp  PhysicsScene.hpp
NightEngine2/src/UnitTest/: UnitTest.cpp  UnitTest.hpp
(+160 files in other folders)
